# legal_ai_bot

./: .env.example  .gitignore  ReadMe.md  main.py  pyproject.toml
legal_agents/: agent.py  runner.py
rag/: code.ipynb  doc_chunk.py
tools/: case_search.py  legal_search.py  mcp_server.py  web_cases_search.py
ui/: app.py
